stopping point, working on anchors and content alignment

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -14,7 +14,7 @@ body {
 :root {
   --main-bg-color: #f3f7f0; /* Mint Cream */
   --header-bg: #454545; /* Onyx */
-  --header-color: #f75c03; /* Orange Pantone */
+  --header-color: white; 
   --main-text: #001524; /* Green Munsell */
   --section-header: #04a777;
   --title-font: "Yuji Syuku", serif;
@@ -32,16 +32,23 @@ header {
   position: sticky;
   background-color: var(--header-bg);
   z-index: 9999;
+  padding-left: 20px;
+  padding-bottom: 10px;
 }
 
-header nav {
-  display: inline-flex;
-  float: right;
+header a:link, a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+header ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
   font-size: 20px;
   font-family: var(--header-font);
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 100vw;
+  justify-content: space-between;
+  width: 60vw;
 }
 
 header h1 {
@@ -50,6 +57,9 @@ header h1 {
   font-family: var(--title-font);
 }
 
+header a:hover {
+  color: var(--section-header);
+}
 /* Section Headers */
 
 .section-headers {
@@ -57,6 +67,7 @@ header h1 {
   width: 20vw;
   margin: 20px;
   flex: 1;
+  position: top;
 }
 
 .section-content {
@@ -90,12 +101,21 @@ img[alt="placeholder image"] {
 
 /* About Me */
 
-.about-me img {
+#headshot {
   max-width: 30%;
   height: auto;
   border-radius: 30px;
 }
 
+/* Design Section */
+
+.design-content {
+  float: right;
+}
+
+.conservation-content {
+  justify-content: flex-end;
+}
 /* Footer */
 footer {
 text-align: center;
